@@ -298,7 +298,7 @@ struct objfile
   {
     psymbol_map.clear ();
     psymtab_map.reset ();
-    partial_symtabs.reset (new psymtab_storage (this));
+    partial_symtabs.reset (new psymtab_storage ());
   }
 
 
